Resolves: tdf#92539 reversed logic on enable/disable

Change-Id: I26ef918c0a68a84c22da3979c1180a2aee7a8109
(cherry picked from commit 13d08f07b4d67afe211997ca37934c45208d50a6)
Reviewed-on: https://gerrit.libreoffice.org/16823
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>